Components no longer overflow the operating table.  Last selected component gets the highest z-index.
Components were spilling out of the edit area and into the preview pane / menu bars.  They no longer do that.

Selecting a component wouldn't bring it to the top so the first item on a slide could become burried under several elements.

--- a/client/web/scripts/ui/editor/res/css/Editor.css
+++ b/client/web/scripts/ui/editor/res/css/Editor.css
@@ -5,6 +5,7 @@
 
 .editor .menuBar {
 	height: 25px;
+	position: relative;
 }
 
 .editor .menuBar > div {
@@ -30,10 +31,6 @@
 
 .editor .nav li.open {
 	background-color: gray;
-}
-
-.editor .perspectives-container {
-	margin-top: 25px;
 }
 
 .editor .navbar-inner {
